Update documentation and add PowerShell test runner
Major documentation improvements across guidelines, backup strategy, changelog, and evaluation/testing chapters for clarity and formatting. Added scripts/run_all_tests.ps1 for unified Android and Python test execution on Windows. Enhanced test logging and output streaming for both pytest and Gradle. Updated Android dependencies and referenced local SDKs for immediate compilation. Various minor fixes to test runners, deprecation warnings, and OpenCV log filtering to improve developer experience.